--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -35,6 +35,20 @@
     }
   },
   "dashboard": {
+    "common": {
+      "loading": "Loading...",
+      "error": "Error",
+      "retry": "Retry",
+      "cancel": "Cancel",
+      "duplicate": "Duplicate",
+      "active": "Active",
+      "inactive": "Inactive",
+      "default": "Default",
+      "errorOccurred": "An error occurred while loading data. Please try again.",
+      "failedToLoad": "Failed to load data",
+      "failedToSave": "Failed to save",
+      "failedToDelete": "Failed to delete"
+    },
     "sidebar": {
       "overview": "Overview",
       "performance": "Performance",
@@ -74,7 +88,21 @@
       "abandonmentRate": "Abandonment Rate",
       "totalSessions": "Total Sessions",
       "funnelTitle": "Checkout Funnel",
-      "funnelSubtitle": "Conversion rate by step"
+      "funnelSubtitle": "Conversion rate by step",
+      "subtitles": {
+        "overallCompletion": "Overall checkout completion",
+        "timeToComplete": "Time to complete checkout",
+        "checkoutsAbandoned": "Checkouts abandoned",
+        "sessionsStarted": "Checkout sessions started"
+      },
+      "labels": {
+        "averageTime": "Average Time",
+        "abandonmentRate": "Abandonment Rate"
+      },
+      "messages": {
+        "loading": "Loading performance data...",
+        "failedToLoad": "Failed to load performance data"
+      }
     },
     "revenue": {
       "title": "Revenue",
@@ -84,7 +112,25 @@
       "totalOrders": "Total Orders",
       "revenuePerHour": "Revenue per Hour",
       "trendTitle": "Revenue Trend",
-      "trendSubtitle": "Revenue over time"
+      "trendSubtitle": "Revenue over time",
+      "subtitles": {
+        "forSelectedPeriod": "Revenue for selected period",
+        "averageTransactionValue": "Average transaction value",
+        "ordersProcessed": "Orders processed",
+        "averageHourlyRevenue": "Average hourly revenue"
+      },
+      "charts": {
+        "revenueByHour": "Revenue by Hour",
+        "peakHoursAnalysis": "Peak hours analysis",
+        "revenueByDay": "Revenue by Day",
+        "weeklyPattern": "Weekly pattern",
+        "hourlyBreakdownComingSoon": "Hourly breakdown chart coming soon",
+        "dailyBreakdownComingSoon": "Daily breakdown chart coming soon",
+        "revenueTooltip": "Revenue"
+      },
+      "messages": {
+        "failedToLoad": "Failed to load revenue data"
+      }
     },
     "analytics": {
       "title": "Analytics",
@@ -143,13 +189,74 @@
       "headingFont": "Heading Font",
       "bodyFont": "Body Font",
       "preview": "Preview",
-      "save": "Save Theme"
+      "save": "Save Theme",
+      "delete": "Delete",
+      "confirmDelete": "Confirm Deletion",
+      "deleteTheme": "Delete Theme",
+      "deleteSuccess": "Theme deleted successfully",
+      "deleteError": "Failed to delete theme",
+      "cannotDeleteActive": "Cannot delete active theme. Please activate another theme first.",
+      "deleteWarning": "This action cannot be undone.",
+      "sections": {
+        "defaultThemes": "Default Themes",
+        "customThemes": "Custom Themes"
+      },
+      "labels": {
+        "active": "Active",
+        "currentlyActive": "Currently Active",
+        "useThisTheme": "Use This Theme",
+        "default": "Default",
+        "basedOn": "Based on",
+        "updatedAt": "Updated at:",
+        "noCustomThemes": "No Custom Themes Yet",
+        "noCustomThemesDesc": "Use a default theme above or create your first custom theme",
+        "loading": "Loading themes..."
+      },
+      "defaultThemes": {
+        "default": {
+          "name": "Default",
+          "description": "Standard step-by-step checkout layout with sidebar"
+        },
+        "singlePage": {
+          "name": "Single Page",
+          "description": "All checkout steps visible simultaneously with smooth scrolling"
+        },
+        "liquidGlass": {
+          "name": "Liquid Glass",
+          "description": "Glassmorphism design with transparent overlays and animated background"
+        }
+      },
+      "duplicateModal": {
+        "title": "Duplicate Theme",
+        "newThemeName": "New Theme Name",
+        "placeholder": "Enter theme name",
+        "duplicate": "Duplicate"
+      },
+      "toast": {
+        "activateSuccess": "Theme activated successfully",
+        "activateError": "Failed to activate theme",
+        "duplicateSuccess": "Theme duplicated successfully",
+        "duplicateError": "Failed to duplicate theme",
+        "alreadyActive": "Theme \"{name}\" is already active",
+        "createdAndActivated": "Theme \"{name}\" created and activated successfully"
+      }
     },
     "insights": {
       "title": "Insights",
       "subtitle": "Actionable recommendations based on your checkout data",
       "noInsights": "No Insights Yet",
-      "noInsightsDescription": "Insights will appear here as we analyze your checkout data."
+      "noInsightsDescription": "Insights will appear here as we analyze your checkout data.",
+      "labels": {
+        "totalInsights": "Total Insights",
+        "highImpact": "High Impact",
+        "mediumImpact": "Medium Impact",
+        "lowImpact": "Low Impact",
+        "noInsightsAvailable": "No insights available"
+      },
+      "messages": {
+        "generating": "Generating insights...",
+        "failedToLoad": "Failed to load insights"
+      }
     },
     "profile": {
       "title": "Profile",
@@ -240,7 +347,12 @@
       "active": "Active",
       "cancelled": "Cancelled",
       "expired": "Expired",
-      "pending": "Pending"
+      "pending": "Pending",
+      "toast": {
+        "failedToLoad": "Failed to load plans data",
+        "updateSuccess": "Plan updated successfully",
+        "updateError": "Failed to update plan"
+      }
     },
     "integrations": {
       "title": "Integrations",
@@ -280,6 +392,27 @@
           "lastUsed": "Last Used"
         },
         "deleteConfirm": "Are you sure you want to delete this API key? This action cannot be undone."
+      }
+    },
+    "themeEditor": {
+      "textsTab": {
+        "stepTitlesDescriptions": "Step Titles & Descriptions",
+        "cartTitle": "Cart Title",
+        "cartDescription": "Cart Description",
+        "profileTitle": "Profile Title",
+        "profileDescription": "Profile Description",
+        "shippingTitle": "Shipping Title",
+        "shippingDescription": "Shipping Description",
+        "paymentTitle": "Payment Title",
+        "paymentDescription": "Payment Description",
+        "pageContent": "Page Content (Rich Text)",
+        "emptyCartMessage": "Empty Cart Message",
+        "confirmationPageContent": "Confirmation Page Content",
+        "thankYouMessage": "Thank You Message",
+        "termsAndConditions": "Terms and Conditions",
+        "termsPlaceholder": "Enter terms and conditions here...",
+        "privacyPolicyPreview": "Privacy Policy Preview",
+        "privacyPlaceholder": "Enter privacy policy preview here..."
       }
     }
   },
